--- a/browser/js/authorized/authorized.html
+++ b/browser/js/authorized/authorized.html
@@ -1,7 +1,7 @@
-<div class="app-aside hidden-xs bg-black">
+<div class="app-aside hidden-xs bg-black" ng-cloak>
         <aside user="user"></aside>
     </div>
 <div  class="app-content fade-in-up">
-    <div ui-view>
+    <div ui-view ng-cloak>
     </div>
 </div>
