--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -10,20 +10,10 @@
         </div>
         <!-- / main header -->
         <div class="wrapper-md">
-            <!-- info bar -->
-            <div class="row mar-btm-30">
-                <div class="col-md-12">
-                    <div class="outlined pad-20 info-bar clearfix">
-                        <div class="icon-cc"><span><img src="img/credit-card.png" alt="CC" title="CC" /></span></div>
-                        <div class="info-wrap"><span class="info-text">Your subscription ends on <strong>March 31, 2017</strong></span></div>
-                        <div class="info-btn"><a href="" class="fill-btn">Upgrade</a></div>
-                    </div>
-                </div>
-            </div>
             <!-- / info bar -->
             <div class="row">
                 <!-- Earnings this month -->
-                <div class="col-md-6 mar-btm-30">
+<!--                 <div class="col-md-6 mar-btm-30">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
                             <span class="main-title">Earnings</span>
@@ -56,31 +46,10 @@
                             <div class="col-md-6 col-xs-6 text-center rev-stat"><strong>Net Revenue</strong><span class="graph-value geen-text">45k</span></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- / Earnings this month -->
                 <!-- Upcoming Classes -->
-                <div class="col-md-6 mar-btm-30 upcoming-classes">
-                    <div class="outlined clearfix pad-20">
-                        <div class="title-box float-lt">
-                            <span class="main-title">Upcoming Classes</span>
-                            <span class="reltd-title">Your upcoming classes for the day</span>
-                        </div>
-                    </div>
-                    <div class="outlined clearfix graph no-top-border">
-                        <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
-                        </ul>
-                    </div>
-                    <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="fill-btn float-rt">View All</a>
-                    </div>
-                </div>
-                <!-- / Upcoming Classes -->
-            </div>
-            <div class="row">
-                <!-- Calender -->
+                                <!-- Calender -->
                 <div class="col-md-6 mar-btm-30">
                     <div class="outlined clearfix">
                         <div id="calendar"></div>
@@ -113,32 +82,28 @@
                 });
                 </script>
                 <!-- / Calender -->
-                <!-- Courses -->
-                <div class="col-md-6 mar-btm-30 courses">
+                <div class="col-md-6 mar-btm-30 upcoming-classes">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
-                            <span class="main-title">Courses</span>
-                            <span class="reltd-title">Your current courses</span>
+                            <span class="main-title">Upcoming Classes</span>
+                            <span class="reltd-title">Your upcoming classes for the day</span>
                         </div>
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="90%"><span class="pregress-bar" style="width: 90%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="60%"><span class="pregress-bar" style="width: 60%"></span></span>
-                            </li>
-                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="80%"><span class="pregress-bar" style="width: 80%"></span></span>
-                            </li>
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
+                            <li><span class="class-title">Fractions 101</span> <span class="class-time">10:00 AM - 11:30 AM</span></li>
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="outlined-btn red-btn float-rt">Create Course </a><a href="" class="fill-btn float-rt">View All</a>
+                        <a href="" class="fill-btn float-rt">View All</a>
                     </div>
                 </div>
-                <!-- / Courses -->
+                <!-- / Upcoming Classes -->
             </div>
             <div class="row">
-                <!-- Transactions -->
+                                <!-- Transactions -->
                 <div class="col-md-6 mar-btm-30 activity">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
@@ -181,8 +146,34 @@
                     </div>
                 </div>
                 <!-- / Transactions -->
+                <!-- Courses -->
+                <div class="col-md-6 mar-btm-30 courses">
+                    <div class="outlined clearfix pad-20">
+                        <div class="title-box float-lt">
+                            <span class="main-title">Courses</span>
+                            <span class="reltd-title">Your current courses</span>
+                        </div>
+                    </div>
+                    <div class="outlined clearfix graph no-top-border">
+                        <ul class="class-list">
+                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="90%"><span class="pregress-bar" style="width: 90%"></span></span>
+                            </li>
+                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="60%"><span class="pregress-bar" style="width: 60%"></span></span>
+                            </li>
+                            <li><span class="class-title">Fractions 101</span> <span class="cource-progress" title="80%"><span class="pregress-bar" style="width: 80%"></span></span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="outlined clearfix pad-20 no-top-border">
+                        <a href="" class="outlined-btn red-btn float-rt">Create Course </a><a href="" class="fill-btn float-rt">View All</a>
+                    </div>
+                </div>
+                <!-- / Courses -->
+            </div>
+            <!-- <div class="row"> -->
+
                 <!-- Assignment Due -->
-                <div class="col-md-6 mar-btm-30 assignment-due">
+<!--                 <div class="col-md-6 mar-btm-30 assignment-due">
                     <div class="outlined clearfix pad-20">
                         <div class="title-box float-lt">
                             <span class="main-title">Assignment Due (3)</span>
@@ -199,9 +190,9 @@
                     <div class="outlined clearfix pad-20 no-top-border">
                         <a href="" class="fill-btn float-rt">View All</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- / Assignment Due -->
-            </div>
+            <!-- </div> -->
             <div class="row">
                 <!-- Recent Activity -->
                 <div class="col-md-12 mar-btm-30 recent-activity">
